Big GUI update! GUI is now distributed using jlink and can be imported via platform-specific classifiers